RAT-478: Apply spotbugs-induced changes, improve javadoc